Added support for rspec version 2 to ptopgen.
Note that command line arguments for ptopgen are tweaked slightly so that after '-g' for GENI, you must enter a version number. Changed invocation in GeniCM. Also, tweaked rspec definitions to make it conform to reality on the ground inside of our system as it gets implemented.

--- a/protogeni/lib/GeniCM.pm.in
+++ b/protogeni/lib/GeniCM.pm.in
@@ -275,7 +275,7 @@ sub GetAdvertisement($$)
     my ($available, $pc) = @_;
     my $xml = undef;
 
-    my $invocation = "$PTOPGEN -x -g -r -p GeniSlices";
+    my $invocation = "$PTOPGEN -x -g 0.1 -r -p GeniSlices";
     $invocation .= " -a" unless $available;
     if (defined($pc)) {
 	$invocation .= " -1 $pc";
