1) handling absense of extensions element in credentials. Had to handle undef's wherever extensions was expected. 2) Modified signgenicred to add namespaces and some attributes. 3) Added namespace and schem alocation global variables in GeniUtil.

--- a/protogeni/lib/GeniCredential.pm.in
+++ b/protogeni/lib/GeniCredential.pm.in
@@ -123,7 +123,7 @@ sub Create($$$)
     $self->{'owner_cert'}    = $owner->GetCertificate();
     $self->{'string'}        = undef;
     $self->{'capabilities'}  = undef;
-    $self->{'extensions'}    = XML::LibXML::Element->new("extensions");
+    $self->{'extensions'}    = undef;
     $self->{'idx'}	     = undef;	# Only set when stored to DB.
     bless($self, $class);
 
@@ -203,6 +203,8 @@ sub AddExtension
     }
     
     my $root = $self->extensions();
+    $root = XML::LibXML::Element->new("extensions")
+    if (!defined($root));
     $root->appendChild($elem);
     $self->{'extensions'} = $root;
     return 0;
@@ -282,9 +284,6 @@ sub CreateFromSigned($$;$)
     my ($extensions) = GeniXML::FindNodes('//n:extensions', 
                         $root)->get_nodelist;
     
-    if (!defined($extensions)) {
-        $extensions = XML::LibXML::Element->new("extensions");
-    }
     # UUID of the credential.
     my ($uuid_node) = $doc->getElementsByTagName("uuid");
     return undef
@@ -451,8 +450,9 @@ sub Sign($$)
     }
     $cap_xml .= "</privileges>\n";
 
-    $cap_xml .= GeniXML::Serialize($self->extensions());
-        if ($self->extensions()->hasChildNodes());
+    my $extensions = $self->extensions();
+    $cap_xml .= GeniXML::Serialize($extensions)
+        if (defined($extensions) && $extensions->hasChildNodes());
     # Every one gets a new unique index, which is used in the xml:id below.
     my $idx = TBGetUniqueIndex('next_ticket', 1);
 
