Add some useful elabinelab sitevars.
New sitevars:
  elabinelab/singlenet     set the system-wide default for cnet implementation
  elabinelab/boss_osid     default OSID for boss node
  elabinelab/ops_osid      default OSID for ops node
  elabinelab/fs_osid       default OSID for fs node

Also mark the various elabinelab/*pkg* sitevars as deprecated.  Package
versions are just too dependent on the OS running and we almost always
wind up overriding these sitevars in rc.mkelab anyway.

--- a/tbsetup/elabinelab.in
+++ b/tbsetup/elabinelab.in
@@ -39,7 +39,14 @@ my $dbgooonly= 0;
 my $update   = 0;
 my $remove   = 0;
 
-# XXX experimental speed hacks
+#
+# XXX experimental speed hacks.
+#     $inparallel    reboots all server in parallel (rather than serially)
+#		     after setup
+#     $restartnodes  uses a new bootinfo RESTART command to quickly move
+#		     inner nodes from control of outer boss to inner boss
+#		     avoiding all node reboots
+#
 my $inparallel = 1;
 my $restartnodes = 1;
 
