--- a/rc.d/GNUmakefile.in
+++ b/rc.d/GNUmakefile.in
@@ -19,6 +19,7 @@ include $(OBJDIR)/Makeconf
 
 RC_SCRIPTS	= 2.mysql-server.sh 3.testbed.sh \
 		  2.dhcpd.sh 1.mysql-client.sh
+SUBBOSS_SCRIPTS	= 2.dhcpd.sh
 OPS_SCRIPTS     = 3.and.sh 1.mysql-client.sh 1.mysql-server.sh
 ifeq ($(ELVINCOMPAT),1)
 OPS_SCRIPTS    += 2.elvind.sh 3.elvin_gateway.sh
@@ -66,6 +67,8 @@ $(INSTALL_RCDIR)/capture: capture.sh
 install: $(addprefix $(INSTALL_RCDIR)/, $(RC_SCRIPTS))
 
 control-install:	$(addprefix $(INSTALL_RCDIR)/, $(OPS_SCRIPTS))
+
+subboss-install:	$(addprefix $(INSTALL_RCDIR)/, $(SUBBOSS_SCRIPTS))
 
 clrhouse-install:	$(INSTALL_RCDIR)/2.mysql-server.sh \
 			$(INSTALL_RCDIR)/1.mysql-client.sh
