--- a/protogeni/scripts/GNUmakefile.in
+++ b/protogeni/scripts/GNUmakefile.in
@@ -17,7 +17,7 @@ PSBIN_STUFF	= register_resources expire_daemon gencrl postcrl \
 		  gencrlbundle shutdownslice remauthority listusage \
 		  update reregister cleanupticket listhistory \
 		  register_sliver sa_daemon genadmincredential \
-      genclrcredentials
+          genclrcredentials genallow_extcred
 
 # These scripts installed setuid, with sudo. 
 SETUID_BIN_SCRIPTS   = 
