--- a/db/subboss_dhcpd_makeconf.in
+++ b/db/subboss_dhcpd_makeconf.in
@@ -39,7 +39,7 @@ $| = 1;
 
 use lib "@prefix@/lib";
 use libtestbed;
-use libsetup 'getdhcpdconf';
+use libsetup 'gendhcpdconf';
 use liblocsetup 'os_gendhcpdconf';
 use libtmcc;
 
