--- a/tmcd/GNUmakefile.in
+++ b/tmcd/GNUmakefile.in
@@ -173,6 +173,10 @@ install:	$(INSTALL_SBINDIR)/tmcd \
 control-install: tmcc
 	@$(MAKE) -C freebsd control-install
 
+subboss-install: client
+	@$(MAKE) -C $(MDSUBDIR) install
+	@$(MAKE) -C common subboss-install
+
 client-install: client
 	@$(MAKE) -C $(MDSUBDIR) install
 
