--- a/tmcd/common/GNUmakefile.in
+++ b/tmcd/common/GNUmakefile.in
@@ -42,6 +42,7 @@ install client-install:
 local-install:		path-install local-script-install symlinks
 remote-install:		path-install remote-script-install
 control-install:	path-install control-script-install
+subboss-install:	subboss-script-install
 
 other-install:
 	(cd ../../os; $(MAKE) DESTDIR=$(DESTDIR) client-install)
@@ -83,6 +84,9 @@ common-script-install:	dir-install
 	$(INSTALL) -m 755 $(SRCDIR)/bootvnodes $(BINDIR)/bootvnodes
 	$(INSTALL) -m 755 $(SRCDIR)/startcmddone $(BINDIR)/startcmddone
 	(cd config; $(MAKE) DESTDIR=$(DESTDIR) script-install)
+
+subboss-script-install:	dir-install
+	(cd config; $(MAKE) DESTDIR=$(DESTDIR) subboss-script-install)
 
 symlinks:	dir-install
 	rm -f $(TBBINDIR)/tevc$(EXE)
